[package]
name = "cabbage_collector"
version = "0.1.1"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = ["cabbage"] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/cabbage_collector"
documentation = "https://github.com/myyrakle/cabbage_collector/blob/master/README.md"
homepage = "https://github.com/myyrakle/cabbage_collector/blob/master/README.md"

[dependencies]